Add download images of each JSON item from Flickr server

--- a/res/layout/activity_flickerlist_items.xml
+++ b/res/layout/activity_flickerlist_items.xml
@@ -9,14 +9,16 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
-    <TextView
-        android:id="@+id/tvMedia"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
-
+   
     <TextView
         android:id="@+id/tvAuthor"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
+    
+     <ImageView
+        android:id="@+id/imgView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+    
 
 </LinearLayout>
